# learnflowai

./: .gitignore  .replit  AppxBlockMap.xml  AppxManifest.xml  AppxSignature.p7x  README.md  ai_engine.py  app.py  callback.py  check_secret.py  database.py  fix_db.py  main.py  mpesa_auth.py  mpesa_config.toml  prompts.py  pyproject.toml  requirements - Copy.txt  requirements.txt  reset_db.py.py  stripe_premium.py  users.db  utils.py
.local/: database.py  prompts.py  reset_admin.py
.streamlit/: config.toml
attached_assets/: Pasted-You-are-a-senior-full-stack-Python-developer-Build-a-complete-production-ready-Personalized-AI-Lea-1761809379655_1761809379657.txt
docker/: Dockerfile  README.md  docker-compose.yml  setup-oracle-cloud.sh
