[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "googletrans==4.0.0rc1",
    "groq>=0.3.0",
    "matplotlib>=3.10.7",
    "nltk>=3.9.2",
    "plotly>=6.3.1",
    "pypdf2>=3.0.1",
    "streamlit>=1.51.0",
    "stripe>=13.1.0",
]
